Body overflow fix

--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@ body {
 
   display: flex;
   flex-direction: column;
-  height: 100vh;
+
+  width: 100vw;
+  height: 100%;
+  min-height: -webkit-fill-available;
+  overscroll-behavior-y: none;
 }
 
 button {
